fix: colorPicker popup's z-index

--- a/src/pages/Sketch/components/Toolbox/toolbox.module.scss
+++ b/src/pages/Sketch/components/Toolbox/toolbox.module.scss
@@ -105,6 +105,7 @@
 				}
 				.popover {
 					position: absolute;
+					z-index: 1;
 				}
 			}
 			.hexInput {
